fix spacing

--- a/style.css
+++ b/style.css
@@ -14,11 +14,11 @@ body {
     background-color: rgb(255, 255, 255);
     display: grid;
     gap: 2px;
-
+    box-shadow: 0px 0px 10px rgb(212, 212, 212);
 }
 
 .pixel {
-    background-color: rgb(222, 201, 255);
+    background-color: rgb(255, 255, 255);
 
     /* eliminate dragging */
     -webkit-user-drag: none;
